<resources>
    <string name="app_name">Zion High School</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="notices">Notices</string>
    <string name="meal">Lunch/Dinner</string>
    <string name="schoolinfo">School Informations</string>
    <string name="schedule">Schedule</string>
    <string name="schoolintro">About the School</string>
    <string name="info">About the App/App Settings</string>
    <string name="quickexec">QuickLaunch : Launch with Shaking your device</string>
    <string name="quickexec_noti">Show Notification for QuickLaunch Service</string>
    <string name="appsettings_settings_title">App Settings</string>
    <string name="appsettings_settings_select">Select Screen to show on QuickLaunch :</string>
    <string name="error">Loading Error. Cannot Load Data</string>
    <string-array name="quickexec_select">
        <item>Home</item>
        <item>Notices</item>
        <item>Lunch/Dinner</item>
        <item>School Informations</item>
        <item>Schedule</item>
        <item>About the School</item>
    </string-array>
    <string name="appsettings_apinfo_title">Application Information</string>
    <string name="appsettings_appinfo_update">Check for updates on  Google Play</string>
    <string name="appsettings_appinfo_src">Get full Sourcecode from GitHub</string>
    <string name="appsettings_docs_title">Legal Notices Documents</string>
    <string name="title_activity_quick_launcher">QuickLauncherActivity</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednsday">Wednsday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="network_connection_warning">No network connection, Check your network connection first</string>
    <string name="address">(422-060)172-20, Eunseong-ro, Sosa-gu, Bucheon-si, Gyeonggi-do, Korea[Click to see more on Google Maps]</string>
    <string name="transportations">Taking bus: \n
        Take 019-1 Bus and get off at the Zion High Schol front door \n
        Take 019, 019-1 or 23-3 bus and get off at the Hanshin Apartments and walk for 10minutes \n
        Take 22 or 71 Bus and get off at Poksa Elementary School and walk for 20 minutes \n
        Take 12, 12-1, 12-2, 33-1, 23-2, 018 Bus and get off at Hyundai Hometown Complex 4,5 and walk for 5 minutes</string>
    <string name="location">Location of the School</string>
    <string name="contact">Contact</string>
    <string name="school_office">School Office : 032-3400-112~6</string>
    <string name="administration_department">Administration Department : 032-3400-103~7</string>
    <string name="fax">FAX : 032-341- 9196</string>
    <string name="feat_busin">Featuring Business</string>
    <string name="feat_busin_desc_1">기본생활태도 실천 : \n
        Daily of frugality \n
        교내 폭력 신고체제 구축 및 상담활동 강화</string>
    <string name="feat_busin_desc_2">Settlement of self-directed learning : \n
        Activation of reading education \n
        정숙하고 바른 학습태도 정착</string>
    <string name="feat_busin_desc_3">학습자 중심의 교육활동 추진 : \n
        진수준별 보충수업 실시 \n
        선택중심 교육과정 운영</string>
    <string name="feat_busin_desc_4">Daily of foreign language : \n
        현대화된 Lab실 개방 및 이용 극대화 \n
        제2외국어 선택 폭 확대(Spanish, Chinese, Japanese)</string>
    <string name="feat_busin_desc_5">개성신장교육 강화 : \n
        화동아리 활동의 활성화 \n
        학술, 학예발표 기회 부여</string>
    <string name="homepage">Visit the Homepage(zion.hs.kr)</string>
    <string name="school_symbol">Symbol of The School</string>
    <string name="goal_edu">Goal of The Our Education</string>
    <string name="fe_eb">Focus efforts and Emphasis Business</string>
    <string name="motto">lesson - 眞理에 살자 :
    \n Commitment to the truth of the true life wisely reminding small and large as a human right is a better human values ​​and rational thought and human happiness will be the driving force to achieve peace.</string>
    <string name="symbol">교표 :
    \n - Full text written in English the meaning of the type of Zion (ZION)
    \n - 전체의 모양은 학교 건물의 개형으로서 시온학원을 뜻함
    \n - 가운데의 O 자는 둥근 형태로서 평온, 평화, 원만을 뜻하고 일상생활을 나타냄
    \n - O 의 i 는 촛불의 형상으로 교훈의 진리에 살자(진리의 촛불을 밝히자)를 뜻함
    \n - O 형태는 원만하고 평화로운 가운데 진리의 촛불을 밝히고 생활에 임하는 자세의 의미가 담겨있음</string>
    <string name="flower">교화 - Rose :
    \n - Love(愛)
    \n - Beauty(美)
    \n - Fragrance(香)</string>
    <string name="tree">Chaplain - Nut pine :
    \n - 깊게 뿌리를 내림 - 내실
    \n - 단단한 열매 - 결실
    \n - 줄기가 곧게 자람 - 지조
    \n - Variety of uses for - Service</string>
    <string name="our_goal">본교 교육목표</string>
    <string name="our_goal_desc">건전한 가치관을 가진 능력있는 사람</string>
    <string name="our_goal_sub_1">자주인 육성 :
    \n 진취적인 정신과 합리적인 생각으로 체계있게 계획하여 스스로 실천하는 사람을 기른다</string>
    <string name="our_goal_sub_2">도덕인 육성 :
    \n 윗사람을 공경하며 예의바른 사람으로 기른다</string>
    <string name="our_goal_sub_3">능력인 육성 :
    \n 여러면에서 활용할 수 있는 지식 및 기술과 창의력으로 문제를 해결할 수 있는 사람으로 기른다</string>
    <string name="our_goal_sub_4">경천애인 육성 :
    \n 하나님을 공경하며 정직하고 부지런하며 규칙을 지키고 봉사와 협동으로 나라와 민족을 사랑하는 사람으로 기른다</string>
    <string name="our_goal_sub_5">건강인 육성 :
    \n 몸과 마음이 고루 건강한 사람으로 기른다</string>
    <string name="zion_human">시온인</string>
    <string name="our_imagin">지향하는 학교상</string>
    <string name="our_imagin_sub_1">교사상 : 가르침기 기쁜 교사와
    \n학생 : 배움이 즐가운 학생이
    \n학교상 : 명랑하고 쾌적한 환경에서 사랑과 믿음으로 어울리는 학교</string>
    <string name="our_philosophy">본교 교육이념</string>
    <string name="our_philosophy_sub">        1.윤리 교육을 통한 예의 바른 인간 양성\n
        2.진리를 탐구하고 참된 삶의 가치를 발견\n
        3.지구 환경의 재인식과 자연 보호 의식의 고취\n
        4.존경받는 스승상 정립\n
        5.세계화 개방화에 대응하는 능동적인 인간 양성</string>
    <string name="our_activity">본교 교육활동</string>
    <string name="our_activity_sub">        1.예절바른 학생, 실력 있는 학생 기르기
        \n2.개인특기, 창의력 계발 교육 충실
        \n3.열린 교육을 지향하는 민주적 학교 운영
        \n4.능력별 학습으로 균등한 학습기회 제공
        \n5.회화 중심의 외국어 교육 강화(Lab 실 운영)
        \n6.미래사회를 대비하는 컴퓨터 교육 강화(컴퓨터실 1,2 운영)</string>
    <string name="fe_eb_sub_1">        학력신장 및 개성, 창의력 신장
        \n-영어, 수학교과 수준별 이동수업
        \n-수준별 방과 후 학력향상 프로그램(무학년제 포함)
        \n-상위권 학생들을 위한 심회반 전용독서실 운영(90석)
        \n-전문가 초청 학습코청, 대학생 멘토링, 모의심층 면접대회
        \n-17년 전통 수학/과학경진대회, 토론대회, 영어경시대회, 자기소개서콘테스트등각종교내대희
        \n-주1희 전문가초청 독서/논술지도
        \n-탐구중심의 열린 과학실험교실 및 과학탐구 대회
        \n-전문가 초청 토론기법 강좌
        \n-JUMP UP 자기주도학습 프로그램 강화</string>
    <string name="fe_eb_sub_2">        학생밀착형 진로/진학 지도
        \n-진로/진학전문 상담교사를 통한 맞춤식 진로/진학상담
        \n-학생 개인별 상담 이력철을 통한 1:1 진학상담
        \n-연 4회 학생/학부모 대상 입시자료집 발간 및 지원전락 설명회
        \n-주요대학 입학관계자 및 EBS 등 전문가 초청 입시설명회
        \n-입학정관전형 대비 포트폴리오 작성 심층 밀착지도
        \n-면접전형 대비 심층면접 분석 및 자기소개서 작성 심층 밀착지도
        \n-논술 및 적성전형 대비 방과 후 학교운영 및 연 3회 모의논술/적성시험
        \n-전문직업인 초청 직업설명회(Career Day) 운영
        \n-직업현장 체험의 날 운영</string>
    <string name="fe_eb_sub_3">        건강한 신제와 따뜻한 감성지향 인성교육
        \n-Wee class 전문상담 프로그램 운영
        \n-Art/Music/Horticultural treatment Counseling programs
        \n-예절준법교실 (부천신문보도)
        \n-교내합창대회 및 작은 음악회
        \n-아버지학교, 저자와의 만남
        \n-명사초청 강연회, 동문초청 강연회
        \n-학교스포츠클럽 탁구대회, 창작음약 줄넘기대회
        \n-동아리/학술/학예활동 발표회(백향제)
        \n-도자기 핸드페인팅 Vision 창조 발표대회(1학년)</string>
    <string name="fe_eb_sub_4">        세계와 교류하는 소통능력증대
        \n-국내 유수 대학교들과의 MOU 체결
        \n-농촌학교와 교환학생 프로그램 운영(2012. 7. 19. EBS 방송보도)
        \n-중국 Zhejiang Wanli 대학교와 MOU 체결
        \n-증국학교와사 역문화체험 교류활동(홈스테이)
        \n-제2외국어 선택 폭 확대(Spanish, Chinese, Japanese)
        \n-외국어교육 강화를 위한 현대화된 Lab실 활용 극대화
        \n-the English-speaking world, 일본 학교와 국제교류확대 추진</string>
    <string name="noti_shake_start">Zion High School : QuickLaunch Service is Enabled</string>
    <string name="noti_shake_title">QuickLaunch Service</string>
    <string name="noti_shake_title_sub">Click to configure QuickLaunch Service</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tutorial_0">Start</string>
    <string name="tutorial_0_0">Slide from right to continue</string>
    <string name="tutorial_1">Features</string>
    <string name="tutorial_1_0">Available Features : Notices, Meal Menu,\n School Information, Schedule, App Settings,\n About the School, QuickLaunch</string>
    <string name="tutorial_2">School Information</string>
    <string name="tutorial_2_0">You can Check for School Information \n such as the location, contact and more.</string>
    <string name="tutorial_3">About the School</string>
    <string name="tutorial_3_0">Read the introduction about our school</string>
    <string name="tutorial_4">Lunch/Dinner</string>
    <string name="tutorial_4_0">Check Lunch/Dinner Menu for this week</string>
    <string name="notices_info">Showing 15 Recent Notices from the School</string>
    <string name="schedule_info">School Schedules in This Month</string>
    <string name="tutorial_5">Notices</string>
    <string name="tutorial_5_0">You can check recent 15 notices from the school</string>
    <string name="tutorial_6">Schedule</string>
    <string name="tutorial_6_0">You can check school schedules in this month</string>
    <string name="title_activity_notices__parents">Notices for Parents</string>
    <string name="noti_parents_info">Showing 15 Recent Notices for Parents from the School</string>
    <string name="tutorial_7">Schedule</string>
    <string name="tutorial_7_0">You can check recent 15 notices for parents from the school</string>
    <string name="tutorial_8">QuickLaunch</string>
    <string name="tutorial_8_0">        Shake your device to launch this app quickly\n
        To use this feature, Enable\n
        [QuickLaunch]in [About the App/App Settings]</string>
    <string name="tutorial_9">Open Sourced</string>
    <string name="tutorial_9_0">        This Application is Open Source Software\n
        which is licensed under the GNU GPL V3\n
        You can get the Full Source code of this\n
        (Remember, this is not the reason of\n
        why this app is zero price)</string>
    <string name="tutorial_done">DONE!</string>
    <string name="tutorial_done_0">        To End this tutorial,\n
        Press the button, [End Tutorial] below</string>
    <string name="tutorial_done_btn">End Tutorial</string>
    <string name="title_activity_doc__readme">README</string>
    <string name="title_activity_doc__notices">NOTICES</string>
    <string name="title_activity_doc__copying">COPYING</string>
    <string name="title_activity_doc__contributors">CONTRIBUTORS</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_web_view">Web Viewer</string>
    <string name="title_activity_meal">MealActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meal_activity3">MealActivity3</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="not_loaded_yet">Not Loaded Yet...</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="nodata">No Data</string>
    <string name="share">Share</string>
    <string name="title_activity_post_view">PostViewActivity</string>
    <string name="open_in_new_window">Open In New Window</string>
</resources>