<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/our_goal"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff353176"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/our_goal_desc"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff353176"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_expand"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_goal_sub_1"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_goal_sub_2"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_goal_sub_3"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_goal_sub_4"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_goal_sub_5"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_expand"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/zion_human"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black"/>



        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/our_imagin"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff353176"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_expand"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_imagin_sub_1"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/our_philosophy"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff353176"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_expand"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_philosophy_sub"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/our_activity"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="#ff353176"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_action_expand"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/our_activity_sub"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/cardbg"
            android:padding="10dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>